tests/snapshots/conformance__n_number_with_alpha_char.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1.8011670033376514H-308]
stdout --- 
<empty>
stderr --- 
error: unexpected character `H`. expected start of a json value
 --> stdin:1:20
  |
1 | [1.8011670033376514H-308]
  |                    ^
